--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -21,7 +21,7 @@ jobs:
       run: npm install
 
     - name: Run lint
-      run: npm lint
+      run: npm run lint
 
     - name: Run tests
       run: npm test
