--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -27,7 +27,7 @@ jobs:
       run: npm test
 
     - name: Build
-      run: npm run build:public
+      run: npm run build:public ${GITHUB_REF#refs/heads/}
 
     - name: Deploy
       if: success()
