--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -28,7 +28,7 @@ jobs:
       run: npm test
 
     - name: Build
-      run: npm run build:public ${GITHUB_REF#refs/heads/}
+      run: npm run build ${GITHUB_REF#refs/heads/}
 
     - name: Deploy
       if: success()
